src/main/java/com/example/gerimedicaexam/error/DefaultCustomException.java
package com.example.gerimedicaexam.error;
public class DefaultCustomException extends Throwable {
        public DefaultCustomException(String message) {
        super(message);
    }
}
